# Pursuit-of-Subs

./: .gitignore  AGENTS.md  README.md  launch_gui.bat  launch_web_gui.bat  pyproject.toml  requirements.txt  subtranslate.py  temp_check.txt  try_gemma4.bat  try_polish.bat
config/: german_fixes.json  glossary.json  glossary_auto.json  names.json  short_fragments.json  titles.json
docs/superpowers/plans/: 2026-07-14-auto-glossary-qa.md
docs/superpowers/specs/: 2026-07-14-auto-glossary-qa-design.md  2026-07-19-learn-mode-design.md
tests/corpus/: drama_01_eng.srt  drama_01_expected.srt  drama_02_eng.srt  drama_02_expected.srt
tmpe02/: Pursuit.of.Jade.E02.srt  Pursuit.of.Jade.E02_ger.srt
translator/: __init__.py  engine.py  gui.py
web_gui/: server.py
web_gui/static/: index.html
