[project]
name = "pursuit-of-subs"
version = "4.3.0"
description = "Self-improving Chinese→German subtitle translation pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pysrt>=1.1.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "requests>=2.28.0",
    "PySide6>=6.5.0",
]

[project.scripts]
subtranslate = "subtranslate:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["translator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
